# DecisionTree-in-Haskel

./: workspace.leskah.lkshs  workspace.leskah.lkshw  workspace.lkshs  ws_erdan.lkshs  ws_erdan.lkshs.lkshs  ws_erdan.lkshs.lkshw
ID3/: ID3.cabal  lab.hs  main.hs
ID3/data/: small_car.csv
ID3/src/: Cars.hs  Fun.hs  ID3.hs  Main.hs
ex2/: ListManipulation.hs  ex2.hs
